--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UX-Nightmare gone wild</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Welcome to UX-Nightmare!</h1>
+    <header>
+      <h1>Willkommen zur schlimmsten Webseite der Welt!</h1>
+    </header>
+    <main>
+      <!-- Login Form -->
+      <section id="login-section">
+        <input type="text" id="username" placeholder="Benutzername" />
+        <input type="password" id="password" placeholder="Passwort" />
+        <button id="login-button">Login</button>
+        <button id="logout-button">Logout</button>
+      </section>
+      <div id="notification-area"></div>
+    </main>
+    <script src="js/main.js"></script>
   </body>
 </html>
