--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UX-Nightmare gone wild</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
   </head>
   <body>
     <header>
