Adjust colors and rename button

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <main>
       <!-- Login Form -->
       <section id="login-section">
-        <input type="text" id="username" placeholder="Benutzername" />
+        <input type="text" id="email" placeholder="Email" />
         <input type="password" id="password" placeholder="Passwort" />
-        <button id="login-button">Login</button>
-        <button id="logout-button">Logout</button>
+        <button id="registrate-button">Registrier dich jetzt</button>
       </section>
       <div id="notification-area"></div>
     </main>
