Make js files modular

--- a/phone.html
+++ b/phone.html
@@ -18,6 +18,6 @@
       </section>
       <div id="notification-area"></div>
     </main>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/phone.js"></script>
   </body>
 </html>
