--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       </section>
       <div id="notification-area"></div>
     </main>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/registration.js"></script>
   </body>
 </html>
