Add hangman wip

--- a/verify.html
+++ b/verify.html
@@ -16,6 +16,7 @@
         <h2 id="security-question">What is the capital of France?</h2>
         <div id="input-display">_ _ _ _ _</div>
         <div id="falling-letters-container"></div>
+        <div id="hangman-display">Hangman: </div>
         <button id="next-button" disabled>Weiter</button>
       </section
       div id="notification-area"></div>
