--- a/verify.html
+++ b/verify.html
@@ -13,10 +13,21 @@
     </header>
     <main>
       <section id="verify-section">
-        <h2 id="security-question">What is the capital of France?</h2>
+        <h2 id="security-question">Lade Sicherheitsfrage...</h2>
+
+        <!-- Countdown-Timer -->
+        <p id="countdown-timer">Zeit übrig: 60s</p>
+
+        <!-- "Eingabefeld" für die Antwort -->
         <div id="input-display">_ _ _ _ _</div>
+
+        <!-- Container für fallende Buchstaben -->
         <div id="falling-letters-container"></div>
+
+        <!-- Hangman-Anzeige -->
         <div id="hangman-display">Hangman: </div>
+
+        <!-- Weiter-Button -->
         <button id="next-button" disabled>Weiter</button>
       </section
       div id="notification-area"></div>
