--- a/verify.html
+++ b/verify.html
@@ -17,6 +17,10 @@
 
         <!-- Countdown-Timer -->
         <p id="countdown-timer">Zeit übrig: 60s</p>
+        <div id="countdown-container">
+    <div id="countdown-bar"></div>
+</div>
+
 
         <!-- "Eingabefeld" für die Antwort -->
         <div id="input-display">_ _ _ _ _</div>
