--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <header>
-      <h1>Willkommen zur schlimmsten Webseite der Welt!</h1>
+      <h1>Welcome to a registration!</h1>
     </header>
     <main>
       <!-- Login Form -->
       <section id="login-section">
         <input type="text" id="email" placeholder="Email" />
         <input type="password" id="password" placeholder="Passwort" />
-        <button id="registrate-button">Registrier dich jetzt</button>
+        <button id="registrate-button">Register now!</button>
       </section>
       <div id="notification-area"></div>
     </main>
