--- a/verify.html
+++ b/verify.html
@@ -20,19 +20,10 @@
         <div id="countdown-container">
     <div id="countdown-bar"></div>
 </div>
-
-
-        <!-- "Eingabefeld" für die Antwort -->
         <div id="input-display">_ _ _ _ _</div>
-
-        <!-- Container für fallende Buchstaben -->
         <div id="falling-letters-container"></div>
-
-        <!-- Hangman-Anzeige -->
-        <div id="hangman-display">Hangman: </div>
-
-        <!-- Weiter-Button -->
-        <button id="next-button" disabled>Weiter</button>
+        <div id="hangman-display">Errors: </div>
+        <button id="next-button" disabled>Continue</button>
       </section
       div id="notification-area"></div>
     </main>
