--- a/phone.html
+++ b/phone.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Handynummer Eingabe</title>
+    <title>Enter phone number</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
   </head>
   <body>
     <header>
-      <h1>Confirm phone number</h1>
+      <h1>Enter phone number</h1>
     </header>
     <main>
       <section id="phone-section">
