--- a/verify.html
+++ b/verify.html
@@ -13,10 +13,10 @@
     </header>
     <main>
       <section id="verify-section">
-        <h2 id="security-question">Lade Sicherheitsfrage...</h2>
+        <h2 id="security-question">Loading security question...</h2>
 
         <!-- Countdown-Timer -->
-        <p id="countdown-timer">Zeit übrig: 60s</p>
+        <p id="countdown-timer">Time left: 60s</p>
         <div id="countdown-container">
     <div id="countdown-bar"></div>
 </div>
