--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>UX-Nightmare gone wild</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body>
+  <body class="bg-light container-fluid">
     <header>
       <h1>Welcome to a registration!</h1>
     </header>
@@ -20,6 +25,7 @@
       </section>
       <div id="notification-area"></div>
     </main>
+
     <script type="module" src="js/registration.js"></script>
   </body>
 </html>
