--- a/verify.html
+++ b/verify.html
@@ -6,8 +6,13 @@
     <title>Verification</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body>
+  <body class="bg-light container-fluid">
     <header>
       <h1>Verification</h1>
     </header>
