--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <body class="bg-light container-fluid">
     <header>
       <h1>Welcome to a registration!</h1>
+      <button id="darkmode-toggle" class="btn btn-dark mt-3">
+        Toggle Dark Mode
+      </button>
     </header>
     <main>
       <!-- Login Form -->
@@ -27,5 +30,6 @@
     </main>
 
     <script type="module" src="js/registration.js"></script>
+    <script type="module" src="js/darkmode.js"></script>
   </body>
 </html>
